Bug #17340  	SHOW CREATE TABLE from second session crashes the server - no check was made that ndb thd object was allocated